force-app/main/default/objects/Staff__c/Staff__c.object-meta.xml
<CustomObject>
    <description>This Object is used to store Staff details</description>
    <label>Staff</label>
    <nameField>
        <label>Staff Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staffs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>