force-app/main/default/objects/Staff__c/fields/Aadhar_Number__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Number__c</fullName>
    <label>Aadhar Number</label>
    <length>16</length>
    <maskChar>X</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>