force-app/main/default/objects/Staff__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check Box idefines Staff is Active or Not</description>
    <inlineHelpText>Check This if Staff is Active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>