force-app/main/default/objects/Staff__c/fields/Increment__c.field-meta.xml
<CustomField>
    <fullName>Increment__c</fullName>
    <inlineHelpText>Enter the Increment Percentage</inlineHelpText>
    <label>Increment</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>