force-app/main/default/objects/Staff__c/fields/Joining_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Joining_Date_Time__c</fullName>
    <label>Joining Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>