force-app/main/default/objects/Staff__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <inlineHelpText>Enter Staff Overview</inlineHelpText>
    <label>Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>