force-app/main/default/objects/Staff__c/fields/Shift_Timing__c.field-meta.xml
<CustomField>
    <fullName>Shift_Timing__c</fullName>
    <label>Shift Timing</label>
    <type>Time</type>
</CustomField>