force-app/main/default/objects/Staff__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Typing</fullName>
            </value>
            <value>
                <fullName>Reading</fullName>
            </value>
            <value>
                <fullName>Programming</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Multi Tasking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>