force-app/main/default/objects/Staff__c/fields/Staff_Id__c.field-meta.xml
<CustomField>
    <fullName>Staff_Id__c</fullName>
    <displayFormat>Staff {000}</displayFormat>
    <label>Staff Id</label>
    <type>AutoNumber</type>
</CustomField>